ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Transaction__c/fields/Account_ID__c.field-meta.xml
<CustomField>
    <fullName>Account_ID__c</fullName>
    <label>Account ID</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Transactions</relationshipLabel>
    <relationshipName>Transactions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>