ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Transaction__c/fields/Account_Payment__c.field-meta.xml
<CustomField>
    <fullName>Account_Payment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payment</label>
    <referenceTo>IKOPRO_Account_Payment__c</referenceTo>
    <relationshipLabel>Transactions</relationshipLabel>
    <relationshipName>Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>