ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Transaction__c/fields/Amount_Formula__c.field-meta.xml
<CustomField>
    <fullName>Amount_Formula__c</fullName>
    <description>New Comment by Harsh : Changing data type from formula (text) to formula (number) to handle negative amount.

Old Comment : shows COOP dollars if Currency used = Coop Dollars, otherwise other currency (USD or CAD based on the &apos;Currency Used&apos;-field.</description>
    <formula>Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount ($)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>