ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Transaction__c/fields/Contact_ID__c.field-meta.xml
<CustomField>
    <fullName>Contact_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact ID</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Transactions</relationshipLabel>
    <relationshipName>Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>