ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Transaction__c/fields/Currency_Used__c.field-meta.xml
<CustomField>
    <fullName>Currency_Used__c</fullName>
    <label>Currency Used</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Currencies</valueSetName>
    </valueSet>
</CustomField>