ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Transaction__c/fields/Generate_Premium_Co_op__c.field-meta.xml
<CustomField>
    <fullName>Generate_Premium_Co_op__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This checkbox indicates whether the CO-op credited will generate Premium Co-op or not.</description>
    <inlineHelpText>Check this field only when allocating COOP $. When checked a 10% allocation will apply to the Premium Cap.</inlineHelpText>
    <label>Allocate Premium CAP</label>
    <type>Checkbox</type>
</CustomField>