ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Transaction__c/fields/Parent_Transaction__c.field-meta.xml
<CustomField>
    <fullName>Parent_Transaction__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Transaction</label>
    <referenceTo>Transaction__c</referenceTo>
    <relationshipLabel>Transactions</relationshipLabel>
    <relationshipName>Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>