ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Transaction__c/fields/Reason_for_Co_op_Entry__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Co_op_Entry__c</fullName>
    <description>This field needs to be filled by Loyalty Admins when they do a manual entry in the Transaction object.</description>
    <label>Reason for Co-Op Adjustment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>