ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Transaction__c/fields/Reimbursement_Claim__c.field-meta.xml
<CustomField>
    <fullName>Reimbursement_Claim__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reimbursement Claim</label>
    <referenceTo>Reimbursement_Claims__c</referenceTo>
    <relationshipLabel>Transactions</relationshipLabel>
    <relationshipName>Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>