ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Transaction__c/fields/Transaction_Date__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Date__c</fullName>
    <label>Date</label>
    <type>Date</type>
</CustomField>