ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Transaction__c/fields/Transaction_JSON__c.field-meta.xml
<CustomField>
    <fullName>Transaction_JSON__c</fullName>
    <label>JSON</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>