ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Transaction__c/fields/Transaction_reference__c.field-meta.xml
<CustomField>
    <fullName>Transaction_reference__c</fullName>
    <label>Transaction reference</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>