ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Transaction__c/fields/Transaction_Sources__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Sources__c</fullName>
    <inlineHelpText>For Coop adjustments, only select &quot;Loyalty Admins&quot; as Transaction Source.</inlineHelpText>
    <label>Sources</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Transaction_Sources</valueSetName>
    </valueSet>
</CustomField>