ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Transaction__c/fields/Transaction_Type__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Type__c</fullName>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Debit</fullName>
            </value>
            <value>
                <fullName>Credit</fullName>
            </value>
            <value>
                <fullName>Void</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>