ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Transaction__c/fields/Transaction_User__c.field-meta.xml
<CustomField>
    <fullName>Transaction_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>