ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Transaction__c/fields/Void_Notes__c.field-meta.xml
<CustomField>
    <fullName>Void_Notes__c</fullName>
    <description>Purpose: internal notes in case Transaction Type = &quot;Void&quot;.</description>
    <label>Void Notes</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>