ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Transaction__c/validationRules/Credit_Amt_Sud_be_Less_Than_2500_By_LA.validationRule-meta.xml
<ValidationRule>
    <fullName>Credit_Amt_Sud_be_Less_Than_2500_By_LA</fullName>
    <active>true</active>
    <errorConditionFormula>AND($Profile.Name = &quot;IKOPRO Loyalty Admin&quot;,NOT(
$Permission.LA_Restriction_On_Transaction_Amount_Field),
Text(Transaction_Type__c)=&quot;Credit&quot;, 
Text(Currency_Used__c)=&quot;Co-op $&quot;,ISBLANK( Reimbursement_Claim__c) ,
Amount__c&gt;2500)</errorConditionFormula>
    <errorMessage>You cannot credit more than 2500 Co-Op funds. To credit more than 2500 Co-Op funds, please contact IKO Loyalty Program Manager.</errorMessage>
</ValidationRule>