ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Transaction__c/validationRules/Debit_Amount_Less_Than_Total_Credit.validationRule-meta.xml
<ValidationRule>
    <fullName>Debit_Amount_Less_Than_Total_Credit</fullName>
    <active>true</active>
    <errorConditionFormula>AND($Profile.Name = &quot;IKOPRO Loyalty Admin&quot;, 
$Permission.LA_Restriction_On_Transaction_Amount_Field, Text(Transaction_Type__c)=&quot;Debit&quot;, Text(Currency_Used__c)=&quot;Co-op $&quot;,ISBLANK( Reimbursement_Claim__c), Amount__c &gt; Account_ID__r.Available_COOP_Funds__c+1)</errorConditionFormula>
    <errorMessage>Debit Amount should be less than Total Available Coop $.</errorMessage>
</ValidationRule>