ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Transaction__c/validationRules/Reason_is_Mandatory_for_Source_Loyalty.validationRule-meta.xml
<ValidationRule>
    <fullName>Reason_is_Mandatory_for_Source_Loyalty</fullName>
    <active>true</active>
    <errorConditionFormula>AND(Text(Transaction_Sources__c)=&quot;Loyalty Admin&quot;, ISBLANK(Reason_for_Co_op_Entry__c),OR(Text(Currency_Used__c)=&quot;Co-op $&quot;,Text(Currency_Used__c)=&quot;Premium Co-op $&quot;) )</errorConditionFormula>
    <errorMessage>Reason for Co-op $ Entry field is mandatory for Transaction Source Loyalty Admin.</errorMessage>
</ValidationRule>