ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Transaction__c/validationRules/Tier_0_cannot_get_Coop_funds.validationRule-meta.xml
<ValidationRule>
    <fullName>Tier_0_cannot_get_Coop_funds</fullName>
    <active>true</active>
    <errorConditionFormula>AND(OR(Text(Currency_Used__c)=&quot;Co-op $&quot;,Text(Currency_Used__c)=&quot;Premium Co-op $&quot;),
Text(Transaction_Type__c)=&quot;Credit&quot;,
Account_ID__r.Present_Tier_Formula__c=&quot;0&quot;,
Text(Transaction_Sources__c)!=&quot;Co-Op Reimbursement&quot;)</errorConditionFormula>
    <errorMessage>Tier 0 contractors are not eligible to get Coop funds.</errorMessage>
</ValidationRule>