ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Transaction__c/validationRules/Tier_1_Not_Applicable_For_COOP.validationRule-meta.xml
<ValidationRule>
    <fullName>Tier_1_Not_Applicable_For_COOP</fullName>
    <active>true</active>
    <errorConditionFormula>AND(OR(Text(Currency_Used__c)=&quot;Co-op $&quot;,Text(Currency_Used__c)=&quot;Premium Co-op $&quot;),Text(Transaction_Type__c)=&quot;Credit&quot;,
OR(Account_ID__r.Present_Tier_Formula__c=&quot;1&quot;,ISBLANK(Account_ID__r.Present_Tier_Formula__c)),
AND(Text(Transaction_Sources__c)!=&quot;Co-Op Reimbursement&quot;, Text(Transaction_Sources__c)!=&quot;Expired Funds&quot;,Text(Transaction_Sources__c)!=&quot;Rebate Invoices reward&quot;,Text(Transaction_Sources__c)!=&quot;Loyalty Admin&quot;))</errorConditionFormula>
    <errorMessage>Accounts with either Tier 1 or No Tier is not applicable for COOP funds</errorMessage>
</ValidationRule>