ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Transaction__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Transaction_Sources__c</columns>
    <columns>Transaction_Date__c</columns>
    <columns>Account_Payment__c</columns>
    <columns>Transaction_reference__c</columns>
    <columns>Amount__c</columns>
    <columns>Currency_Used__c</columns>
    <columns>Account_ID__c</columns>
    <columns>Transaction_Type__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>